Fix z-index

--- a/client/scripts/content.css
+++ b/client/scripts/content.css
@@ -20,7 +20,7 @@
   font-size: 16px;
   line-height: 1.75;
   text-rendering: optimizeSpeed;
-  z-index: 9999;
+  z-index: 9999999;
 }
 
 #extention-popup::-webkit-scrollbar{
